# matrix-osu-bot

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
matrix-macros/: Cargo.toml
matrix-macros/src/: lib.rs
matrix-osu-bot/: Cargo.toml
matrix-osu-bot/src/: context.rs  embed.rs  error.rs  main.rs  settings.rs
matrix-osu-bot/src/commands/: james.rs  mod.rs  sas.rs  user.rs
matrix-osu-bot/src/embeds/: builder.rs  mod.rs  user.rs
matrix-osu-bot/src/events/: mod.rs  room_message.rs  stripped_state_member.rs  verification.rs
matrix-osu-bot/src/matrix/: mod.rs  session.rs  settings.rs  verification.rs
osu-lib/: Cargo.toml
osu-lib/src/: lib.rs  osu_client.rs  settings.rs
