[workspace]
resolver = "3"
members = ["osu-lib", "matrix-osu-bot"]

[workspace.dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "net", "fs"] }
thiserror = "2.0.18"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

# https://nnethercote.github.io/perf-book/build-configuration.html#disable-debug-info-generation
[profile.dev]
debug = false