[package]
name = "matrix-osu-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

tokio = { workspace = true }
thiserror = { workspace = true }