[package]
name = "matrix-osu-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
maud = "0.27.0"
num-format = "0.4.4"

tokio = { workspace = true }
thiserror = { workspace = true }

osu-lib = { path = "../osu-lib" }